@@ -24,3 +24,4 @@ add_subdirectory( StringTest )
 add_subdirectory( SortedArrayTest )
 add_subdirectory( LinkedListTest )
 add_subdirectory( FunctorTest )
+add_subdirectory( TwoLockQueueTest )
